[package]
name = "neo4j-pool-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo4rs = "0.6.1"

thiserror = "1.0.37"
anyhow = "1.0.66"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
serde = "1.0.147"
redis = { version = "0.22.1", features = ["tokio-comp"] }
once_cell = "1.16.0"
tracing = "0.1.37"
clap = { version = "4.0.18", features = ["env", "derive"] }
petgraph = {version = "0.6.2", features = ["serde"]}
futures = "0.3.25"
hyper = { version = "0.14.20", features = [ "server", "tcp", "http1", "http2" ] }
rusted_cypher = "1.1.0"
bolt-client = "0.10.1"
deadpool = "0.9.2"
deadpool-bolt = "0.1.0"
tokio-util = { version = "0.7.4", features = ["compat"] }
ethers = { version = "2.0.7", features = ["ws", "rustls", "abigen"] }
url = "2.4.0"
async-trait = "0.1.68"